--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -37,7 +37,8 @@ block pagecontent
 		+servicesGoods('34', 'светлейших головы')
 		+servicesGoods('65', 'наград за&nbsp;проекты').--indent
 		+servicesDescription("Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.")
-		+servicesList().--indent
+	.container
+		+b.UL.services-list--indent
 			+servicesItem("Все услуги")
 			+servicesItem("Потребительский брендинг")
 			+servicesItem("Корпоративный брендинг")
