--- a/sourse/pug/blocks/sVideo/_sVideo.pug
+++ b/sourse/pug/blocks/sVideo/_sVideo.pug
@@ -1,10 +1,8 @@
 mixin sVideo(data)
 	// start sVideo
 	+b.sVideo.section#sVideo&attributes(attributes)
-		.container
-			p Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
-			p Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.
+		
 		.container-wide
-			+b.video-wrrpaer
+			+b.video-wrrpaer.mt-0
 				iframe(src='https://www.youtube.com/embed/L_LUpnjgPso' title='YouTube video player' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 	// end sVideo
