--- a/sourse/pug/pages/08-portfolio.pug
+++ b/sourse/pug/pages/08-portfolio.pug
@@ -19,21 +19,38 @@ block pagecontent
 	+top-nav()
 	+page-head(title, 'true')
 	+sServiceHead().sServiceHead
-		+servicesList().--indent.--portfolio
-			+servicesItem("Напитки")
-			+servicesItem("Мясные продукты")
-			+servicesItem("Молочные и НЕмолочные продукты")
-			+servicesItem("Бакалея и кондитерские изделия")
-			+servicesItem("Фармацевтика")
-			+servicesItem("Дети и здоровье")
-			+servicesItem("Финансы и девелопмент")
-			+servicesItem("Государственные организации и программы")
-			+servicesItem("Добывающая промышленность")
-			+servicesItem("Технологии")
-			+servicesItem("Товары и услуги для детей")
-			+servicesItem("Бытовая химия и товары для дома")
-			+servicesItem("Социально значимые проекты и госпрограммы")
-		+serviceDropdown()
+		.filter__content-block.active#tab1
+			+servicesList().--indent.--portfolio
+				+servicesItem("Напитки")
+				+servicesItem("Мясные продукты")
+				+servicesItem("Молочные и НЕмолочные продукты")
+				+servicesItem("Бакалея и кондитерские изделия")
+				+servicesItem("Фармацевтика")
+				+servicesItem("Дети и здоровье")
+				+servicesItem("Финансы и девелопмент")
+				+servicesItem("Государственные организации и программы")
+				+servicesItem("Добывающая промышленность")
+				+servicesItem("Технологии")
+				+servicesItem("Товары и услуги для детей")
+				+servicesItem("Бытовая химия и товары для дома")
+				+servicesItem("Социально значимые проекты и госпрограммы")
+			+serviceDropdown()
+		.filter__content-block#tab2
+			+servicesList().--indent.--portfolio
+				+servicesItem("Напитки")
+				+servicesItem("Мясные продукты")
+				+servicesItem("Молочные и НЕмолочные продукты")
+				+servicesItem("Бакалея и кондитерские изделия")
+				+servicesItem("Фармацевтика")
+				+servicesItem("Дети и здоровье")
+				+servicesItem("Финансы и девелопмент")
+				+servicesItem("Государственные организации и программы")
+				+servicesItem("Добывающая промышленность")
+				+servicesItem("Технологии")
+				+servicesItem("Товары и услуги для детей")
+				+servicesItem("Бытовая химия и товары для дома")
+				+servicesItem("Социально значимые проекты и госпрограммы")
+			+serviceDropdown()
 	+sCard(``, `preloader`)
 		.col-md-12
 			+cardItem('Bakerton. Выбери цвет настроения!', 'Потребительский брендинг', 'main-bg').--horizontal
