--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -53,9 +53,9 @@ mixin page-head(t, filter)
 			block
 			h1= t
 			if filter
-				+b.filter
-					+e.link--active(href="#") Услуги
-					+e.link(href="#") Отрасли
+				+b.filter--tab-js
+					+e.link--active(href="#tab1") Услуги
+					+e.link(href="#tab2") Отрасли
 
 mixin mainSliderItem(imgLg, imgSm, title, text)
 	+e.slide.swiper-slide
