--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -31,8 +31,8 @@ mixin footer()
 							a(href="mailto:info@ddvb.ru") info@ddvb.ru
 						li 
 							a(href="tel:+74959160123") +7 (495) 916-01-23
-				.col-12.col-lg-6.col-policy
 					+e.A.policy(href="#") Политика конфиденциальности
+				//- .col-12.col-lg-6.col-policy
 				.col-auto.col-copy
 					+e.copyright © 2021 -2022, ddvb
 				.col-auto.col-dev
