--- a/sourse/pug/blocks/sHistory/_sHistory.pug
+++ b/sourse/pug/blocks/sHistory/_sHistory.pug
@@ -21,22 +21,12 @@ mixin sHistoryText(...texts)
 mixin sHistory(data)
 	// start sHistory
 	+b.sHistory.section#sHistory&attributes(attributes)
+		if data.ad
+			+mainSlider().--service
+				+mainSliderItem('slide-lg-2', 'slide-sm-2', 'Bakerton. Детское питание Сады Придонья: Расширение линейки', 'Потребительский брендинг')
+				+mainSliderItem('slide-lg-2', 'slide-sm-2', 'Bakerton. Детское питание Сады Придонья: Расширение линейки', 'Потребительский брендинг')
+				+mainSliderItem('slide-lg-2', 'slide-sm-2', 'Bakerton. Детское питание Сады Придонья: Расширение линейки', 'Потребительский брендинг')
 		.container
-			if data.ad
-				+b.head-wrapper
-					.row 
-						+e.col.col-lg-6
-							h2 Придаём брендам человеческое лицо,
-							p помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей
-						.col-lg-6
-							+e.slider--js.swiper&attributes(attributes)
-								.swiper-wrapper
-									+e.slide.swiper-slide
-										+pic('sHistory-bg', '', 0)
-									+e.slide.swiper-slide(style)
-										+pic('sHistory-bg', '', 0)
-									+e.slide.swiper-slide
-										+pic('sHistory-bg', '', 0)
 			block
 	// end sHistory
 	
