--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -22,7 +22,14 @@
 	&__menu {
 		padding-top: rem(27);
 		margin-bottom: rem(35 - 9);
-		columns: rem(134) 2;
+		// columns:  2;
+		@include media-breakpoint-down(lg) {
+			display: flex;
+			flex-wrap: wrap;
+			li{
+				width: 50%;
+			}
+		}
 		@include media-breakpoint-up(lg) {
 			columns: rem(76) 3;
 			padding-top: rem(0);
@@ -99,10 +106,11 @@
 		margin-bottom: rem(23);
 		@include media-breakpoint-up(xl) {
 			margin-bottom: 0;
-			padding-right: rem(95);
+			// padding-right: rem(95);
 		}
 		@include media-breakpoint-up(lg) {
-			padding-right: rem(118);
+			// padding-right: rem(118);
+			margin-bottom: -40px;
 		}
 	}
 	&__copyright {
@@ -159,6 +167,12 @@
 			text-align: right;
 		}
 	}
+	.col-copy ,
+		.col-dev {
+			@include media-breakpoint-up(lg) {
+				margin-top: -1.5rem;
+			}
+		}
 	.col-copy {
 		@include media-breakpoint-up(lg) {
 			order: 5;
