--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -192,6 +192,11 @@
 					left: 0;
 				}
 			}
+			&:first-child:last-child{
+				&::after{
+					display: none;
+				}
+			}
 		}
 	}
 	&__row {
@@ -207,8 +212,11 @@
 		position: relative;
 		p{
 			position: relative;
-			max-height: var(--ph, 2.6em);
+			max-height: var(--ph, 3.6em);
 			overflow: hidden;
+			line-height: 2;
+			color: #6C6C6C;
+			font-weight: normal;
 			&::after {
 				@include mt;
 				position: absolute;
@@ -216,7 +224,7 @@
 				display: block;
 				width: 100%;
 				height: 2.5em;
-				top: 1.2em;
+				top: 1.6em;
 				left: 0;
 				opacity: var(--op,1);
 				// transition: all .3s ease;
@@ -527,9 +535,11 @@
 				padding-right: 0;
 			}
 		}
+		a,
 		button {
 			@include mt;
 			padding: 0;
+			color: $body-color !important;
 			border-bottom: 2px solid transparent;
 			font-size: rem(22);
 			@include media-breakpoint-up(lg) {
@@ -565,6 +575,7 @@
 	max-width: 1920px;
 	--h: #{rem(599)};
 	height: var(--h);  
+	
 	@include media-breakpoint-up(lg) {
 		margin-bottom: rem(80 - 17.5);
 	}
@@ -607,10 +618,20 @@
 	}
 	&__bg{
 		// height: var(--h); 
-		@include a-cent; 
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
 		// z-index: calc((var(--step) + 1)  * 2 );
 	} 
 	&__slide {
+		*{
+			z-index: 2;
+		}
+		picture{
+			z-index: 1;
+		}
 		position: relative;
 		// position: static !important;
 		overflow: hidden;
