--- a/sourse/pug/pages/09-about-company.pug
+++ b/sourse/pug/pages/09-about-company.pug
@@ -21,6 +21,7 @@ block pagecontent
 	//- +mob-mnu()
 	+top-nav()
 	+page-head(title)
+		+breadcrumb('Главная','О компании', title)
 	+sHistory({
 		ad: true
 	})
