--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -79,7 +79,7 @@ mixin mainSliderItem(imgLg, imgSm, title, text)
 
 mixin mainSlider()
 	+b.main-slider--js.swiper&attributes(attributes)
-		+arrow
+		//- +arrow
 		.swiper-wrapper
 			block
 		.swiper-pagination
