--- a/sourse/pug/blocks/sVision/_sVision.pug
+++ b/sourse/pug/blocks/sVision/_sVision.pug
@@ -28,7 +28,7 @@ mixin sVision(data)
 
 		.container-wide
 			.vision-item-wrapp
-				.container
+				.container.px-0
 					.row 
 						.col 
 							.span-wrapper 
