--- a/sourse/pug/blocks/sHistory/_sHistory.scss
+++ b/sourse/pug/blocks/sHistory/_sHistory.scss
@@ -29,6 +29,11 @@
 .head-wrapper {
 	background-color: $primary;
 	margin-bottom: rem(32);
+	@include media-breakpoint-up(lg) {
+	picture{
+		text-align: right;
+	}
+	}
 	@include media-breakpoint-down(md) {
 		padding-left: 16px;
 		padding-right: 16px;
