--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -48,6 +48,10 @@
 				margin-right: 0;
 				margin-top: rem(32);
 			}
+			li,
+			p{
+				line-height: 2;
+			}
 			p {
 				margin-bottom: rem(8);
 				@include media-breakpoint-up(lg) {
