--- a/sourse/pug/blocks/sVision/_sVision.scss
+++ b/sourse/pug/blocks/sVision/_sVision.scss
@@ -15,7 +15,11 @@
 		--bs-gutter-x: 0.4rem;
 	}
 	.main-slider{
-		margin-top: 55px;
+		@include media-breakpoint-up(sm) {
+
+			margin-top: 55px;
+		}
+		margin-top: 16px;
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
@@ -31,12 +35,12 @@
 	@include media-breakpoint-down(sm) {
 		margin-left: calc(-1 * var(--x-wide));
     margin-right: calc(-1 * var(--x-wide));
-		padding-left:   0 ;
-		padding-right:   0 ;
+		// padding-left:   0 ;
+		// padding-right:   0 ;
 	}
 	
 	
-	padding: 56px 56px 38px;
+	padding: 56px calc( 41px + 2rem ) 38px;
 	background: $info;
 }
 .vision-item{
@@ -76,7 +80,7 @@
 	margin-bottom: -24px;
 }
 
-@media (max-width: 991.98px){
+@include media-breakpoint-down(md) {
 	.vision-item-wrapp{
 		margin: 56px 0;
 		padding: 40px 16px;
