--- a/sourse/pug/blocks/sCard/_sCard.pug
+++ b/sourse/pug/blocks/sCard/_sCard.pug
@@ -1,4 +1,4 @@
-mixin sCard(btn, preloader)
+mixin sCard(btn, preloader, slider)
 	// start sCard
 	+b.sCard.section&attributes(attributes)
 		.container-wide
