--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -163,7 +163,7 @@
 	}
 	&__item {
 		list-style-type: none;
-		display: inline-flex;
+		// display: inline-flex;
 		margin-bottom: em(5);
 		&:not(:last-child) {
 			&:after {
