--- a/sourse/pug/pages/03-Service-2.pug
+++ b/sourse/pug/pages/03-Service-2.pug
@@ -43,9 +43,15 @@ block pagecontent
 				+ddGroupItem('Ситуация', '', 'Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  ')
 				+ddGroupItem('Задача', '', 'Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать')
 				+ddGroupItem('Решение', '', '&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;')
-		+sCard(``)
+		+sCard(``,``, slider)
 			.col-md-12
-				+cardItem('', '', 'card-bg-6.jpg').--horizontal
+				+e.slider--js.swiper
+					.swiper-wrapper
+						- for (var x = 0; x < 3; x++)
+							+e.slide.swiper-slide
+								+pic("card-bg-6.jpg")
+					+arrow
+					.swiper-pagination.d-lg-none
 	//- +sServiceCite()
 	+b.sContent.section
 		.container
