--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -9,6 +9,8 @@ mixin allcss()
 
 mixin allcjs() 
 	script(src="libs/jquery/jquery.min.js")
+	script(src="js/jquery.waypoints.min.js")
+	script(src="js/waypoint.js")
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
 	script(src="libs/swiper/swiper-bundle.min.js")
 	script(src="libs/inputmask/inputmask.min.js") 
